--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -68,7 +68,7 @@
           </li>
           {% endif %}
         </ul>
-        <p class="copyright text-muted">Copyright &copy; {{ site.author }} {{ 'now' | date: "%Y" }}</p>
+        <p class="copyright text-muted">Copyright &copy; Tech Graphics Plus 2004-2020</p>
       </div>
     </div>
   </div>
